# babangida

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
api/: AGENTS.md  Cargo.toml
api/src/: lib.rs  main.rs
api/tests/: auth_it.rs  bootstrap_it.rs  http_it.rs  marketplace_it.rs  messaging_community_it.rs  music_it.rs  openapi_it.rs  verification_it.rs
application/: AGENTS.md  Cargo.toml
application/src/: command.rs  error.rs  lib.rs  ports.rs  query.rs
babangida-vault/: COMMON.md  SHUBINFRAMEWORK.md  index.md
babangida-vault/active/decisions/: 0001-stack.md  0002-monorepo-cargo-workspace.md  0003-domain-as-source-of-truth.md  0004-cqrs-read-write-split.md  0005-invite-model.md  0006-web-leptos-ssr.md  0007-mobile-dioxus-native-shell.md  0008-uikit-shared-crate.md  0009-nix-flake-ci-db.md  0010-verification-model.md  0011-invite-issuance-atomicity.md  0012-messaging-community-model.md  0013-authentication-sessions.md  0014-marketplace-model.md  0015-mobile-client-architecture.md  0016-verification-process.md  0017-music-model.md  0018-open-api-model.md
babangida-vault/active/features/authentication/: index.md
babangida-vault/active/features/identity-invites/: index.md
babangida-vault/active/features/marketplace/: index.md
babangida-vault/active/features/messaging-communities/: index.md
babangida-vault/active/features/mobile/: index.md
babangida-vault/active/features/music/: index.md
babangida-vault/active/features/open-api/: index.md
babangida-vault/active/features/verification/: index.md
babangida-vault/active/patterns/: error-handling.md  repository.md
babangida-vault/stable/: design-system.md  glossary.md  stack.md
domain/: AGENTS.md  Cargo.toml
domain/src/: auth.rs  community.rs  content.rs  error.rs  lib.rs  marketplace.rs  messaging.rs  music.rs  openapi.rs  social.rs  specification.rs  verification.rs
domain/src/identity/: invite.rs  mod.rs  repository.rs  specifications.rs  user.rs  value_objects.rs
infrastructure/: AGENTS.md  Cargo.toml
infrastructure/src/: auth.rs  clock.rs  community.rs  content.rs  error.rs  identity.rs  invite_code.rs  lib.rs  marketplace.rs  messaging.rs  music.rs  openapi.rs  pool.rs  verification.rs
infrastructure/tests/: community_it.rs  issuance_it.rs
migrations/: 0001_init.sql  0002_seed_admin.sql  0003_messaging_community.sql  0004_group_posts.sql  0005_auth.sql  0006_marketplace.sql  0007_verification.sql  0008_music.sql  0009_api_keys.sql
mobile-android/: AGENTS.md  Cargo.toml  Dioxus.toml
mobile-android/src/: lib.rs  main.rs
mobile-ios/: AGENTS.md  Cargo.toml  Dioxus.toml
mobile-ios/src/: lib.rs  main.rs
mobile-ui/: AGENTS.md  Cargo.toml
mobile-ui/src/: client.rs  lib.rs  screens.rs  store.rs
shared/: AGENTS.md  Cargo.toml
shared/src/: id.rs  lib.rs  time.rs
uikit/: AGENTS.md  Cargo.toml
uikit/src/: components.rs  components_dioxus.rs  lib.rs  theme.css  theme.rs  tokens.rs
web/: AGENTS.md  Cargo.toml  tailwind.config.js
web/src/: app.rs  lib.rs  main.rs
web/style/: input.css
