[package]
name = "babangida-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
babangida-domain.workspace = true
babangida-shared.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
