[package]
name = "babangida-infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Адаптеры (postgres/sqlx) реализуют доменные порты (ADR-0003). Runtime-API sqlx
# (без compile-time макросов) — `cargo check`/CI зелёные без БД; SQL проверяют
# интеграционные тесты против БД из nix (ADR-0009).
babangida-application.workspace = true
babangida-domain.workspace = true
babangida-shared.workspace = true
sqlx.workspace = true
async-trait.workspace = true
uuid.workspace = true
time.workspace = true

[dev-dependencies]
tokio.workspace = true
sqlx.workspace = true
babangida-domain.workspace = true
babangida-application.workspace = true
babangida-shared.workspace = true
