[package]
name = "babangida-mobile-ios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Нативный шелл: рендерер `mobile` (webview через wry/tao) под iOS. Требует
# device-тулчейн (Xcode/`dx`), поэтому НЕ в default — `cargo check --workspace`
# собирает только UI-ядро. Собирать реальный app — `dx build` (ADR-0007).
shell = ["dioxus/mobile", "dioxus/launch"]

[dependencies]
# Тонкий нативный шелл (ADR-0007/0015): весь UI и data-client — в общем
# `mobile-ui`; здесь только запуск под iOS (рендерер `mobile` под фичей `shell`).
babangida-mobile-ui.workspace = true
dioxus.workspace = true
