[package]
name = "babangida-mobile-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Общий mobile-UI (ADR-0015): Dioxus-экраны + сигнальная навигация + data-client.
# Шеллы mobile-ios/-android делегируют сюда; нативный рендерер включают они (фича
# `shell`). Шарит токены и Dioxus-виджеты `uikit` (ADR-0008).
babangida-uikit = { workspace = true, features = ["dioxus"] }
dioxus.workspace = true
# Данные — прямой HTTP к тому же API, что и web (ADR-0015), без SSR/server-функций.
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
