[package]
name = "babangida-uikit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Токены (модуль `tokens`) framework-agnostic и доступны всегда. Рендер-компоненты
# опциональны и под фичей своего фреймворка: `leptos` для web, `dioxus` для mobile
# (ADR-0008). Сам крейт по умолчанию не тянет ни Leptos, ни Dioxus.
leptos = ["dep:leptos"]
dioxus = ["dep:dioxus"]

[dependencies]
leptos = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }
